--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,20 @@
-###
 # Unity folders and files
-###
 [Aa]ssets/AssetStoreTools*
 [Bb]uild/
 [Ll]ibrary/
 [Ll]ocal[Cc]ache/
+[Ll]ogs/
 [Oo]bj/
 [Tt]emp/
 [Uu]nityGenerated/
-# file on crash reports
+
+# Unity3D generated file on crash reports
 sysinfo.txt
+
 # Unity3D generated meta files
 *.pidb.meta
 
-###
 # VS/MD solution and project files
-###
 [Ee]xportedObj/
 *.booproj
 *.csproj
@@ -26,11 +25,15 @@ sysinfo.txt
 *.user
 *.userprefs
 *.pidb
-.DS_Store
 
-###
+# Builds
+*.apk
+*.unitypackage
+
+# Visual Studio cache directory
+.vs/
+
 # OS generated
-###
 .DS_Store
 .DS_Store?
 ._*
